--- a/my-app/package.json
+++ b/my-app/package.json
@@ -10,7 +10,7 @@
     "gh-pages": "^3.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^5.0.1",
     "tone": "^14.7.30",
     "use-wake-lock": "^1.1.0"
   },
@@ -36,6 +36,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {}
+  }
 }
